--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -16,7 +16,7 @@
     },
     "generate-openapi": {
       "outputs": [
-        "openapi.json"
+        "public/openapi.json"
       ]
     },
     "dev": {
