--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,24 +22,17 @@
   "dependencies": {
     "@agentset/db": "workspace:*",
     "@agentset/emails": "workspace:*",
+    "@agentset/engine": "workspace:*",
+    "@agentset/storage": "workspace:*",
     "@agentset/ui": "workspace:*",
+    "@agentset/utils": "workspace:*",
     "@agentset/validation": "workspace:*",
-    "@ai-sdk/anthropic": "^1.2.11",
-    "@ai-sdk/azure": "^1.2.1",
-    "@ai-sdk/google": "^1.2.17",
-    "@ai-sdk/openai": "^1.2.1",
     "@ai-sdk/react": "^1.1.21",
-    "@aws-sdk/client-s3": "^3.772.0",
-    "@aws-sdk/s3-presigned-post": "^3.772.0",
-    "@aws-sdk/s3-request-presigner": "^3.772.0",
-    "@azure/search-documents": "^12.1.0",
     "@bprogress/next": "^3.2.4",
     "@calcom/embed-react": "^1.5.2",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^4.1.3",
-    "@llamaindex/core": "^0.5.8",
     "@number-flow/react": "^0.5.9",
-    "@pinecone-database/pinecone": "5.1.1",
     "@stripe/stripe-js": "^7.0.0",
     "@supabase/supabase-js": "^2.49.1",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -55,11 +48,9 @@
     "ai": "^4.1.54",
     "better-auth": "^1.2.8",
     "bottleneck": "^2.19.5",
-    "cohere-ai": "^7.16.0",
     "fast-deep-equal": "^3.1.3",
     "file-type": "^21.0.0",
     "framer-motion": "^12.4.10",
-    "llamaindex": "^0.9.11",
     "marked": "^15.0.7",
     "next": "15.3.2",
     "react": "catalog:react19",
@@ -74,7 +65,6 @@
     "tw-animate-css": "^1.2.9",
     "ua-parser-js": "^2.0.2",
     "usehooks-ts": "^3.1.1",
-    "voyage-ai-provider": "^1.0.1",
     "zod": "catalog:",
     "zod-error": "^1.5.0",
     "zod-openapi": "catalog:",
