Refactor imports to use new plans module, update environment variables, and enhance document processing tasks across multiple services

--- a/packages/stripe/package.json
+++ b/packages/stripe/package.json
@@ -5,6 +5,7 @@
   "exports": {
     ".": "./src/index.ts",
     "./client": "./src/client.ts",
+    "./plans": "./src/plans.ts",
     "./env": "./src/env.ts"
   },
   "scripts": {
