--- a/packages/engine/tsconfig.json
+++ b/packages/engine/tsconfig.json
@@ -3,10 +3,7 @@
   "compilerOptions": {
     "lib": ["ES2022", "dom", "dom.iterable"],
     "jsx": "preserve",
-    "module": "esnext",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "module": "esnext"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
