--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -73,6 +73,7 @@
     "@agentset/eslint-config": "workspace:*",
     "@agentset/prettier-config": "workspace:*",
     "@agentset/tsconfig": "workspace:*",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.12.0",
     "@tailwindcss/postcss": "^4.0.12",
     "@types/humps": "^2.0.6",
     "@types/node": "^22.10.10",
