Refactor environment variable validation to use zod's url method, enhance Pinecone upsert response handling, and improve error handling in ingest jobs. Update job scripts for better clarity and functionality.

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "trigger dev",
+    "trigger:dev": "trigger dev",
     "trigger:deploy": "trigger deploy --skip-sync-env-vars",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "clean": "git clean -xdf .cache .turbo .trigger node_modules",
