--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -22,6 +22,7 @@
     "@agentset/storage": "workspace:*",
     "@agentset/stripe": "workspace:*",
     "@agentset/utils": "workspace:*",
+    "@agentset/validation": "workspace:*",
     "@trigger.dev/sdk": "4.0.0-v4-beta.23",
     "@upstash/redis": "^1.34.9",
     "ai": "catalog:",
