--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -23,7 +23,7 @@
     "@agentset/stripe": "workspace:*",
     "@agentset/utils": "workspace:*",
     "@agentset/validation": "workspace:*",
-    "@trigger.dev/sdk": "4.0.0-v4-beta.23",
+    "@trigger.dev/sdk": "^4.0.0",
     "@upstash/redis": "^1.34.9",
     "ai": "catalog:",
     "zod": "catalog:"
@@ -32,10 +32,10 @@
     "@agentset/eslint-config": "workspace:*",
     "@agentset/prettier-config": "workspace:*",
     "@agentset/tsconfig": "workspace:*",
-    "@trigger.dev/build": "4.0.0-v4-beta.23",
+    "@trigger.dev/build": "^4.0.0",
     "eslint": "catalog:",
     "prettier": "catalog:",
-    "trigger.dev": "4.0.0-v4-beta.23",
+    "trigger.dev": "^4.0.0",
     "typescript": "catalog:"
   },
   "prettier": "@agentset/prettier-config"
