--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,15 +51,13 @@
     "fast-deep-equal": "^3.1.3",
     "file-type": "^21.0.0",
     "framer-motion": "^12.4.10",
-    "marked": "^15.0.7",
     "next": "15.3.2",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
-    "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1",
     "resend": "^4.1.2",
     "server-only": "^0.0.1",
     "slugify": "^1.6.6",
+    "streamdown": "^1.0.11",
     "superjson": "^2.2.1",
     "tw-animate-css": "^1.2.9",
     "ua-parser-js": "^2.0.2",
