--- a/turbo.json
+++ b/turbo.json
@@ -126,7 +126,9 @@
     "ASSETS_S3_ENDPOINT",
     "ASSETS_S3_BUCKET",
     "ASSETS_S3_URL",
-    "TRIGGER_SECRET_KEY"
+    "TRIGGER_SECRET_KEY",
+    "NEXT_PUBLIC_POSTHOG_KEY",
+    "NEXT_PUBLIC_POSTHOG_HOST"
   ],
   "globalPassThroughEnv": [
     "NODE_ENV",
