log api requests with posthog

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,7 @@
     "framer-motion": "^12.4.10",
     "next": "15.5.2",
     "posthog-js": "^1.260.1",
+    "posthog-node": "^5.8.1",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "resend": "^4.1.2",
