--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,11 +27,11 @@
     "@agentset/ui": "workspace:*",
     "@agentset/utils": "workspace:*",
     "@agentset/validation": "workspace:*",
-    "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/react": "^2.0.44",
     "@bprogress/next": "^3.2.4",
     "@calcom/embed-react": "^1.5.2",
     "@dnd-kit/sortable": "^10.0.0",
-    "@hookform/resolvers": "^5.1.1",
+    "@hookform/resolvers": "^5.2.2",
     "@number-flow/react": "^0.5.9",
     "@supabase/supabase-js": "^2.49.1",
     "@t3-oss/env-nextjs": "catalog:",
@@ -44,6 +44,7 @@
     "@upstash/redis": "^1.34.9",
     "@vercel/functions": "^2.0.0",
     "ai": "catalog:",
+    "ai-sdk-zustand": "^0.1.0",
     "better-auth": "^1.3.3",
     "bottleneck": "^2.19.5",
     "fast-deep-equal": "^3.1.3",
