--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "trigger:dev": "trigger dev",
-    "trigger:deploy": "trigger deploy --skip-sync-env-vars",
+    "trigger:dev": "dotenv -- trigger dev",
+    "trigger:deploy": "dotenv -- trigger deploy --skip-sync-env-vars --dry-run",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "clean": "git clean -xdf .cache .turbo .trigger node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
@@ -23,7 +23,7 @@
     "@agentset/stripe": "workspace:*",
     "@agentset/utils": "workspace:*",
     "@agentset/validation": "workspace:*",
-    "@trigger.dev/sdk": "^4.0.1",
+    "@trigger.dev/sdk": "^4.0.2",
     "@upstash/redis": "^1.34.9",
     "ai": "catalog:",
     "zod": "catalog:"
@@ -32,10 +32,11 @@
     "@agentset/eslint-config": "workspace:*",
     "@agentset/prettier-config": "workspace:*",
     "@agentset/tsconfig": "workspace:*",
-    "@trigger.dev/build": "^4.0.1",
+    "@trigger.dev/build": "^4.0.2",
+    "dotenv-cli": "^8.0.0",
     "eslint": "catalog:",
     "prettier": "catalog:",
-    "trigger.dev": "^4.0.1",
+    "trigger.dev": "^4.0.2",
     "typescript": "catalog:"
   },
   "prettier": "@agentset/prettier-config"
