--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "trigger:dev": "dotenv -- trigger dev",
-    "trigger:deploy": "dotenv -- trigger deploy --skip-sync-env-vars --dry-run",
+    "trigger:deploy": "dotenv -- trigger deploy --skip-sync-env-vars",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "clean": "git clean -xdf .cache .turbo .trigger node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
