--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -10,12 +10,15 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "iconLibrary": "lucide",
   "aliases": {
-    "components": "./src/components",
-    "utils": "./src/lib/utils",
-    "ui": "@agentset/ui",
-    "lib": "./src/lib",
-    "hooks": "./src/hooks"
+    "components": "@/components",
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
   },
-  "iconLibrary": "lucide"
+  "registries": {
+    "@ai-elements": "https://registry.ai-sdk.dev/{name}.json"
+  }
 }
