--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,10 +4,7 @@
   "compilerOptions": {
     "lib": ["ES2022", "dom", "dom.iterable"],
     "jsx": "preserve",
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
+    "rootDir": ".",
     "module": "esnext"
   },
   "exclude": ["node_modules"]
