--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -14,6 +14,9 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "prettier": "@agentset/prettier-config",
+  "dependencies": {
+    "slugify": "^1.6.6"
+  },
   "devDependencies": {
     "@agentset/eslint-config": "workspace:*",
     "@agentset/prettier-config": "workspace:*",
