optimize openapi spec & remove generation step

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,8 +14,7 @@
     "preview": "next build && next start",
     "start": "pnpm with-env next start",
     "typecheck": "tsc --noEmit",
-    "with-env": "dotenv -e ../../.env --",
-    "generate-openapi": "tsx --env-file=../../.env ./scripts/generate-openapi.ts"
+    "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@agentset/db": "workspace:*",
