add jiti to import env validation, and disable turbopack for development

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "build": "pnpm with-env next build",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
     "check": "pnpm lint && tsc --noEmit",
-    "dev": "pnpm with-env next dev --turbopack",
+    "dev": "pnpm with-env next dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "lint:fix": "pnpm lint --fix",
@@ -49,6 +49,7 @@
     "fast-deep-equal": "^3.1.3",
     "file-type": "^21.0.0",
     "framer-motion": "^12.4.10",
+    "jiti": "^2.6.1",
     "next": "15.5.2",
     "posthog-js": "^1.260.1",
     "posthog-node": "^5.8.1",
