--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -22,6 +22,8 @@ catalog:
   "@trpc/tanstack-react-query": ^11.4.3
   "@trpc/server": ^11.4.3
 
+  vitest: ^3.2.4
+
 catalogs:
   react19:
     react: 19.1.1
