--- a/turbo.json
+++ b/turbo.json
@@ -105,6 +105,7 @@
     "DEFAULT_PINECONE_HOST",
     "SECONDARY_PINECONE_API_KEY",
     "SECONDARY_PINECONE_HOST",
+    "DEFAULT_TURBOPUFFER_API_KEY",
     "AZURE_SEARCH_URL",
     "AZURE_SEARCH_INDEX",
     "AZURE_SEARCH_KEY",
