add zeroentropy and abstract re-ranking logic

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ QSTASH_NEXT_SIGNING_KEY=sig_xxx
 DEFAULT_PINECONE_API_KEY=pcsk_xxx
 DEFAULT_PINECONE_HOST="https://xxx.svc.xxx.pinecone.io"
 
+DEFAULT_TURBOPUFFER_API_KEY=xxx
+
 # Managed models for customers who don't provide their own credentials
 DEFAULT_AZURE_RESOURCE_NAME=xxx
 DEFAULT_AZURE_API_KEY=xxx
@@ -29,6 +31,7 @@ DEFAULT_AZURE_LLM_DEPLOYMENT=gpt-4.1
 
 # Cohere (Re-ranking)
 DEFAULT_COHERE_API_KEY=xxx
+DEFAULT_ZEROENTROPY_API_KEY=xxx
 
 # Ingest API (for ingesting data)
 PARTITION_API_URL=https://example.com/ingest
