--- a/turbo.json
+++ b/turbo.json
@@ -114,6 +114,7 @@
     "DEFAULT_AZURE_EMBEDDING_DEPLOYMENT",
     "DEFAULT_AZURE_LLM_DEPLOYMENT",
     "DEFAULT_COHERE_API_KEY",
+    "DEFAULT_ZEROENTROPY_API_KEY",
     "PARTITION_API_URL",
     "PARTITION_API_KEY",
     "S3_ACCESS_KEY",
