--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -28,6 +28,7 @@
     "@azure/search-documents": "^12.1.0",
     "@llamaindex/core": "^0.5.8",
     "@pinecone-database/pinecone": "5.1.1",
+    "@qdrant/js-client-rest": "^1.15.1",
     "@t3-oss/env-nextjs": "catalog:",
     "@turbopuffer/turbopuffer": "^1.2.0",
     "cohere-ai": "^7.19.0",
