--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@agentset/tsconfig/internal-package.json",
-  "include": ["src", "generate-types.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
