Refactor chat components and improve message status handling
- Updated chat input to enhance the disabled state logic.
- Introduced a new MessageStatus component to manage message loading states.
- Simplified message rendering logic in PreviewMessage and Messages components.
- Enhanced Overview component layout for better visual structure.
- Updated agentic pipeline to streamline status handling.
- Adjusted VSCode settings to exclude additional build directories.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,9 @@
   "search.exclude": {
     "**/node_modules": true,
     "**/dist": true,
-    "pnpm-lock.yaml": true,
-    ".git/**": true
+    "**/.next": true,
+    "**/.turbo": true,
+    ".git/**": true,
+    "pnpm-lock.yaml": true
   }
 }
