--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,7 +4,10 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./types": "./src/types/prisma.ts"
+    "./types": "./src/types/prisma.ts",
+    "./trigger": "./src/trigger.ts",
+    "./client": "./src/client.ts",
+    "./edge": "./src/edge.ts"
   },
   "scripts": {
     "postinstall": "pnpm db:generate",
@@ -21,10 +24,10 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^1.0.1",
-    "@prisma/adapter-neon": "^6.16.2",
-    "@prisma/adapter-pg": "^6.16.2",
-    "@prisma/client": "^6.16.2"
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-neon": "^7.0.0",
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0"
   },
   "prisma": {
     "schema": "prisma/schema"
@@ -37,8 +40,8 @@
     "dotenv-cli": "^8.0.0",
     "eslint": "catalog:",
     "prettier": "catalog:",
-    "prisma": "^6.16.2",
-    "prisma-json-types-generator": "^3.6.1",
+    "prisma": "^7.0.0",
+    "prisma-json-types-generator": "^3.6.2",
     "typescript": "catalog:"
   },
   "prettier": "@agentset/prettier-config"
