fix prisma generate in CI

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,7 +16,7 @@
     "dev": "tsc",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "db:generate": "pnpm with-env prisma generate",
+    "db:generate": "dotenv -e ../../.env -v PRISMA_MODE=generate -- prisma generate",
     "db:deploy": "pnpm with-env prisma migrate deploy",
     "db:studio": "pnpm with-env prisma studio",
     "db:migrate": "pnpm with-env prisma migrate dev",
