--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -12,8 +12,7 @@
     "export": "email export --dir ./src/templates",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
-    "with-env": "dotenv -e ../../.env --"
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
     "@react-email/components": "^0.0.34",
@@ -26,7 +25,6 @@
     "@agentset/tsconfig": "workspace:*",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
-    "dotenv-cli": "^8.0.0",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "react-email": "^4.0.2",
