--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app.agentset.ai",
   "private": true,
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "bun@1.3.3",
   "engines": {
     "node": ">=22.12.0"
   },
@@ -22,8 +22,8 @@
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
     "lint": "turbo run lint --continue -- --cache --cache-location .cache/.eslintcache",
     "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/.eslintcache",
-    "lint:ws": "pnpm dlx sherif@latest",
-    "postinstall": "pnpm lint:ws",
+    "lint:ws": "bunx sherif@latest",
+    "postinstall": "bun lint:ws",
     "typecheck": "turbo run typecheck",
     "ui-add": "turbo run ui-add"
   },
@@ -34,5 +34,35 @@
     "turbo": "^2.3.4",
     "typescript": "catalog:"
   },
-  "prettier": "@agentset/prettier-config"
+  "prettier": "@agentset/prettier-config",
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*",
+      "tooling/*"
+    ],
+    "catalog": {
+      "eslint": "^9.35.0",
+      "prettier": "^3.6.2",
+      "tailwindcss": "^4.1.17",
+      "typescript": "^5.9.2",
+      "zod": "^4.1.8",
+      "zod-openapi": "^5.4.1",
+      "@t3-oss/env-nextjs": "^0.13.8",
+      "ai": "^5.0.44",
+      "@tanstack/react-query": "^5.83.0",
+      "@trpc/client": "^11.4.3",
+      "@trpc/tanstack-react-query": "^11.4.3",
+      "@trpc/server": "^11.4.3",
+      "vitest": "^3.2.4"
+    },
+    "catalogs": {
+      "react19": {
+        "react": "19.2.1",
+        "react-dom": "19.2.1",
+        "@types/react": "^19.2.6",
+        "@types/react-dom": "^19.2.3"
+      }
+    }
+  }
 }
