--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     },
     "catalogs": {
       "react19": {
-        "react": "19.2.1",
-        "react-dom": "19.2.1",
-        "@types/react": "^19.2.6",
-        "@types/react-dom": "^19.2.3"
+        "react": "19.2.3",
+        "react-dom": "19.2.3",
+        "@types/react": "19.2.6",
+        "@types/react-dom": "19.2.3"
       }
     }
   }
