--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "prettier": "^3.6.2",
       "tailwindcss": "^4.1.17",
       "typescript": "^5.9.3",
-      "zod": "^4.3.5",
+      "zod": "4.3.5",
       "zod-openapi": "^5.4.6",
       "@t3-oss/env-nextjs": "^0.13.8",
       "ai": "^5.0.44",
