--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
       "tailwindcss": "^4.1.17",
       "typescript": "^5.9.3",
       "zod": "4.3.5",
-      "zod-openapi": "^5.4.6",
+      "zod-error": "^2.0.0",
+      "zod-openapi": "5.4.6",
       "@t3-oss/env-nextjs": "^0.13.8",
       "ai": "^5.0.44",
       "@tanstack/react-query": "^5.90.12",
