--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,6 +38,7 @@
     "./hover-card": "./src/components/ui/hover-card.tsx",
     "./input": "./src/components/ui/input.tsx",
     "./input-group": "./src/components/ui/input-group.tsx",
+    "./input-otp": "./src/components/ui/input-otp.tsx",
     "./label": "./src/components/ui/label.tsx",
     "./popover": "./src/components/ui/popover.tsx",
     "./progress": "./src/components/ui/progress.tsx",
@@ -76,6 +77,7 @@
     "cmdk": "1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "input-otp": "^1.4.2",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.4.3",
