--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "@agentset/utils": "workspace:*",
     "@origin-space/image-cropper": "^0.1.9",
+    "@tanstack/react-table": "^8.21.2",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -78,22 +79,21 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "lucide-react": "^0.562.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.4.3",
     "react-dropzone": "^14.3.8",
-    "streamdown": "^1.6.8",
-    "tailwind-merge": "^3.0.2",
-    "tokenlens": "^1.2.1",
+    "react-hook-form": "^7.62.0",
+    "sonner": "^2.0.7",
+    "streamdown": "^2.0.1",
+    "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1"
   },
   "peerDependencies": {
-    "@tanstack/react-table": "^8.21.2",
     "ai": "catalog:",
-    "lucide-react": "^0.478.0",
-    "react": "catalog:react19",
-    "react-hook-form": "^7.62.0",
-    "sonner": "^2.0.1"
+    "react": "catalog:react19"
   },
   "devDependencies": {
     "@agentset/eslint-config": "workspace:*",
