--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -14,15 +14,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@eslint/compat": "^1.3.2",
-    "@next/eslint-plugin-next": "^15.5.3",
+    "@eslint/compat": "^1.4.1",
+    "@next/eslint-plugin-next": "^15.5.9",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "beta",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-turbo": "^2.5.6",
-    "typescript-eslint": "^8.44.0"
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-turbo": "^2.7.4",
+    "typescript-eslint": "^8.53.0"
   },
   "devDependencies": {
     "@agentset/prettier-config": "workspace:*",
