--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,9 @@ DISCORD_HOOK_ALERTS=
 DISCORD_HOOK_CRON=
 DISCORD_HOOK_SUBSCRIBERS=
 DISCORD_HOOK_ERRORS=
+
+# Tinybird – required for analytics 
+# Get your Tinybird Auth Token here: https://www.tinybird.co/docs/concepts/auth-tokens.html
+TINYBIRD_API_KEY=
+# Varies based on your Tinybird region: https://www.tinybird.co/docs/api-reference/api-reference.html#regions-and-endpoints
+TINYBIRD_API_URL=https://api.us-east.aws.tinybird.co
