add webhook management features including CRUD operations, event handling, and email notifications

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -21,6 +21,7 @@
     "@agentset/engine": "workspace:*",
     "@agentset/storage": "workspace:*",
     "@agentset/stripe": "workspace:*",
+    "@agentset/tinybird": "workspace:*",
     "@agentset/utils": "workspace:*",
     "@agentset/validation": "workspace:*",
     "@trigger.dev/sdk": "^4.3.0",
