fix type errors

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@agentset/jobs": "workspace:*",
     "@agentset/storage": "workspace:*",
     "@agentset/stripe": "workspace:*",
+    "@agentset/tinybird": "workspace:*",
     "@agentset/ui": "workspace:*",
     "@agentset/utils": "workspace:*",
     "@agentset/validation": "workspace:*",
