Refactor email handling in webhook processes by integrating the new sendEmail function from the @agentset/emails package. Remove deprecated references to the resend library and clean up unused webhook cache functionality. Additionally, update dependencies in bun.lock and package.json for improved email rendering and environment management.

--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -16,8 +16,12 @@
   },
   "dependencies": {
     "@react-email/components": "^1.0.1",
+    "@react-email/render": "^1.0.1",
+    "@t3-oss/env-nextjs": "catalog:",
     "react": "catalog:react19",
-    "react-dom": "catalog:react19"
+    "react-dom": "catalog:react19",
+    "resend": "^6.7.0",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@agentset/eslint-config": "workspace:*",
