Add @agentset/webhooks package and integrate webhook functionality across the application. Update bun.lock and package.json to include new dependencies. Refactor existing webhook handling to utilize the new structure, enhancing event emission and validation processes for documents and ingest jobs.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "@agentset/ui": "workspace:*",
     "@agentset/utils": "workspace:*",
     "@agentset/validation": "workspace:*",
+    "@agentset/webhooks": "workspace:*",
     "@ai-sdk/react": "^2.0.44",
     "@bprogress/next": "^3.2.12",
     "@calcom/embed-react": "^1.5.3",
