--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -15,6 +15,7 @@
   },
   "prettier": "@agentset/prettier-config",
   "dependencies": {
+    "@agentset/utils": "workspace:*",
     "nanoid": "^5.1.5",
     "zod": "catalog:"
   },
