Enhance environment configuration by adding emails environment and updating OpenAPI document creation to be synchronous. Refactor webhook schemas to utilize new status schemas and improve event data validation. Update package dependencies and streamline webhook exports.

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -27,7 +27,8 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^7.1.0",
     "@prisma/adapter-pg": "^7.1.0",
-    "@prisma/client": "^7.1.0"
+    "@prisma/client": "^7.1.0",
+    "zod": "catalog:"
   },
   "prisma": {
     "schema": "prisma/schema"
