--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -15,7 +15,9 @@
   },
   "prettier": "@agentset/prettier-config",
   "dependencies": {
+    "@agentset/db": "workspace:*",
     "@agentset/utils": "workspace:*",
+    "@agentset/validation": "workspace:*",
     "nanoid": "^5.1.5",
     "zod": "catalog:"
   },
