upgrade shadcn components and add dark mode

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,8 @@
     "./client-only": "./src/components/client-only.tsx",
     "./copy-button": "./src/components/copy-button.tsx",
     "./cropper": "./src/components/cropper.tsx",
+    "./card": "./src/components/ui/card.tsx",
+    "./theme-provider": "./src/components/theme-provider.tsx",
     "./data-wrapper": "./src/components/data-wrapper.tsx",
     "./empty-state": "./src/components/empty-state.tsx",
     "./file-uploader": "./src/components/file-uploader.tsx",
@@ -26,9 +28,8 @@
     "./badge": "./src/components/ui/badge.tsx",
     "./breadcrumb": "./src/components/ui/breadcrumb.tsx",
     "./button": "./src/components/ui/button.tsx",
-    "./card": "./src/components/ui/card.tsx",
+    "./button-group": "./src/components/ui/button-group.tsx",
     "./checkbox": "./src/components/ui/checkbox.tsx",
-    "./carousel": "./src/components/ui/carousel.tsx",
     "./collapsible": "./src/components/ui/collapsible.tsx",
     "./command": "./src/components/ui/command.tsx",
     "./data-table": "./src/components/ui/data-table.tsx",
@@ -78,7 +79,6 @@
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "nanoid": "^5.1.5",
