--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,6 +58,7 @@
     "react-dom": "catalog:react19",
     "resend": "^6.7.0",
     "server-only": "^0.0.1",
+    "shadcn": "^3.8.4",
     "superjson": "^2.2.6",
     "tw-animate-css": "^1.4.0",
     "ua-parser-js": "^2.0.8",
