--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -73,6 +73,8 @@
   "dependencies": {
     "@agentset/utils": "workspace:*",
     "@origin-space/image-cropper": "^0.1.9",
+    "@streamdown/code": "^1.0.2",
+    "@streamdown/math": "^1.0.2",
     "@tanstack/react-table": "^8.21.2",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
@@ -87,7 +89,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
-    "streamdown": "^2.0.1",
+    "streamdown": "^2.2.0",
     "tailwind-merge": "^3.4.0",
     "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1"
